Detail view UI: Fix wrapping 'view all' buttons

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -1502,7 +1502,6 @@ div.list-view td.state.off span {
   position: relative;
   left: 0px;
   float: left;
-  width: 460px;
   height: 22px;
   border-top: 1px solid #808080;
   /*+box-shadow:inset 0px 1px #FFFFFF;*/
@@ -1907,7 +1906,7 @@ div.detail-group td.view-all a {
   background: url(../images/gradients.png) repeat-x 0px -529px;
   font-size: 11px;
   display: block;
-  height: 25px;
+  height: 27px;
   text-decoration: none;
   color: #4C5D6C;
   /*+text-shadow:0px 1px 2px #FFFFFF;*/
@@ -1916,7 +1915,7 @@ div.detail-group td.view-all a {
   -o-text-shadow: 0px 1px 2px #FFFFFF;
   text-shadow: 0px 1px 2px #FFFFFF;
   float: left;
-  padding: 0 8px 0 5px;
+  padding: 0 1px;
   border-left: 1px solid #9B9EA2;
   /*+border-radius:5px 0 0 5px;*/
   -moz-border-radius: 5px 0 0 5px;
@@ -1971,10 +1970,10 @@ div.details .main-groups label.error {
 }
 
 .detail-view td.view-all.multiple {
-  width: 123px !important;
-  height: 22px;
-  float: left;
+  max-width: 145px;
+  height: 17px;
   display: block;
+  float: left;
   margin: 8px 2px 8px 8px;
   border: none !important;
   /*+box-shadow:none;*/
